// -----------------------------------------------------------------------------
UCDetector 1.10.0 from 2012-xx-xx - eclipse 3.4 - 3.7:
New features:

Bugfixes:

Todo:
 - [ 3396900 ] Abstract classes' constructors can always be protected
 - [ 3400167 ] Removed warnings: Restrict method/field visibility to class visibility

// -----------------------------------------------------------------------------
UCDetector 1.9.0 from 2011-10-26 - eclipse 3.4-3.7:
New features:
 - [ 3323078 ] Added: startLine, endLine, fileName to xml report
 - All preferences for headless mode are in ucdetector.options

Bugfixes:
 - UCDetector works now with "Eclipse IDE for Java Developers" (changed dependency org.eclipse.pde.core to "optional")
 - Improved backwards compatibility: UCDetector works with eclipse 3.4 (3.3)
 - [ 3396856 ] Fields in interfaces are already final

// -----------------------------------------------------------------------------
UCDetector 1.8.0 from 2011-06-15 - eclipse 3.5, 3.6, 3.7:
New features:
 - [ 3176780 ] New option: ignore "derived" files
 - Improved layout for ignore preferences
 - New build in detection mode "extreme" (no filter, show all kinds of warnings)
 - UCDetector actions are now available for Working Sets
 - New extension point 'org.ucdetector.reports' to create custom report using xslt or java
 - Create custom report by renaming and changing __custom.xslt

Bugfixes:
 - Fixed broken filter '@SuppressWarnings("ucd") = false'
 - Fixed NPE, when a compilation unit has no primary type
 - Search class names in text file now works also for nested classes: com.example.Foo$NestedClass
 - [ 3200043 ] Bad marker "test only" for classes used in xml file
 - [ 3191417 ] Change to "protected" should be default

// -----------------------------------------------------------------------------
UCDetector 1.7.0 from 2011-02-04 - eclipse 3.5, 3.6, 3.7:
New features:
 - [ 3049290 ] Set target platform in headless mode