@@ -1,8 +1,10 @@
 // -----------------------------------------------------------------------------
 UCDetector 1.10.0 from 2012-xx-xx - eclipse 3.4 - 3.7:
 New features:
+ - [ 3474895 ] Improved "// NO_UCD" quickfix
 
 Bugfixes:
+ - [ 3474851 ] Bad handling of quickfixes on multi-selection
 
 Todo:
  - [ 3396900 ] Abstract classes' constructors can always be protected
